--- a/DistIN.Application/Views/Home/Index.cshtml
+++ b/DistIN.Application/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="text-center">
-    <img src="~/img/distin_logo_512px.png" style="max-width:90%" />
+    <img src="~/img/DistIN_Logo_512px.png" style="max-width:90%" />
     <br />
     <h1>DISTRIBUTED IDENTITY<br />INFORMATION NETWORK</h1>
     <br />
